apps/dev/kagent/yt-agent-mcp.yaml


apiVersion: v1
kind: Service
metadata:
  name: yt-kmcp-kagent
  namespace: kagent
  annotations:
    kagent.dev/mcp-service-path: /mcp
    kagent.dev/mcp-service-port: "3000"
  labels:
    kagent.dev/mcp-service: "true"
spec:
  ports:
  - appProtocol: mcp
    name: mcp
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/instance: yt-kmcp
    app.kubernetes.io/name: yt-kmcp
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
