apps/dev/kagent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kagent-ingress
  namespace: kagent
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  ingressClassName: nginx
  rules:
  - host: kagent.kubegit.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kagent-ui
            port:
              number: 80
              
  tls:
  - hosts:
    - kagent.kubegit.com
    secretName: kagent-tls
